--- a/JavaScript/10 Days of JavaScript/Day 8: Create a Button/index.html
+++ b/JavaScript/10 Days of JavaScript/Day 8: Create a Button/index.html
@@ -8,3 +8,5 @@
     <script src="js/button.js" type="text/javascript"></script>
 </body>
 </html>
+
+<!–– Link to the problem: https://www.hackerrank.com/challenges/js10-create-a-button?isFullScreen=true&hr_b=1/ ––>
